# tokiboks

./: .gitignore  CLAUDE.md  README.md  dev_server.py
firmware/: api_client.cpp  api_client.h  buttons.cpp  buttons.h  config_store.cpp  config_store.h  firmware.ino  rfid_reader.cpp  rfid_reader.h  secrets.h.example  web_content.h  web_server.cpp  web_server.h  wifi_manager.cpp  wifi_manager.h
firmware/data/: app.js  index.html  style.css
labels/: create_card.py  kuler.py  pyproject.toml
player/: audioplayer.py  main.py  mp3player.py  mpvplayer.py
server/: main.py  mpg123player.py  mpvplayer.py  player_test.py  pyproject.toml
tools/: web_to_header.py
